# XA30_workaround

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  directory_watcher.ps1  pyproject.toml  readNordicBinaryFiles.py  requirements.txt  setup.py
.github/workflows/: main.yml  python-app.yml
host_scripts/: dat_copier.ps1
tests/: conftest.py  test_dat.py  test_dcmdat2niix.py  test_dicom.py
xa30_workaround/: dat.py  dicom.py
xa30_workaround/scripts/: dcmdat2niix.py
