[project]
name = "xa30_workaround"
description = "scripts for xa30 workarounds"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = [{ name = "Andrew Van", email = "vanandrew@wustl.edu" }]
keywords = ["neuroimaging"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
urls = { gitlab = "https://gitlab.com/vanandrew/omni" }
dependencies = [
    "nibabel >= 4.0.2",
    "pydicom >= 2.3.1",
    "numpy == 1.24.3",
    "indexed-gzip >= 1.7.1",
]
version = "0.0.1"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["tests", "build", "extern"]

[tool.black]
line-length = 120
target-version = ['py37']
exclude = "extern|build"
