[project]
name = "xa30_workaround"
description = "scripts for xa30 workarounds"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [{ name = "Andrew Van", email = "vanandrew77@gmail.com" }]
keywords = ["neuroimaging"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
urls = { github = "https://github.com/vanandrew/xa30_workaround" }
dependencies = [
    "nibabel >= 4.0.2",
    "pydicom >= 2.3.1",
    "numpy >= 1.22.4",
    "indexed-gzip >= 1.7.1",
]
dynamic = ["version"]

[project.scripts]
dcmdat2niix = "xa30_workaround.scripts.dcmdat2niix:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["ruff>=0.11.6", "pyright>=1.1.398", "pre-commit>=3.0"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools_scm]
version_file = "xa30_workaround/_version.py"

[tool.setuptools.packages.find]
exclude = ["tests", "build", "extern"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["extern", "build"]

[tool.ruff.lint]
ignore = ["E203", "E741"]

[tool.ruff.format]
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.9"
exclude = ["extern", "build", "**/__pycache__", "**/.*", ".venv", "**/node_modules"]
